--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="min-h-screen flex items-center justify-center text-center px-6">
     <div>
       <h1 class="text-5xl font-extrabold mb-4">Awareness and Prevention of Dengue Fever</h1>
-      <p class="text-lg text-gray-200">Community Engagement Project</p>
+      <p class="text-lg text-gray-200">Community Engagement Project Proposal</p>
     </div>
   </section>
 
@@ -49,11 +49,11 @@
     <h2 class="text-3xl font-bold mb-8">Expected Outcomes</h2>
     <div class="grid md:grid-cols-3 gap-6">
       <div class="glass p-6 rounded-2xl">Improved community knowledge about dengue and its prevention.</div>
-      <div class="glass p-6 rounded-2xl">Reduced mosquito breeding sites through clean-up drives.</div>
+      <div class="glass p-6 rounded-2xl">Reduced mosquito breeding sites through community participation.</div>
       <div class="glass p-6 rounded-2xl">Enhanced collaboration between community and local authorities.</div>
-      <div class="glass p-6 rounded-2xl">Decrease in number of dengue cases reported.</div>
+      <div class="glass p-6 rounded-2xl">Decrease in number of dengue cases reported during and after the project.</div>
       <div class="glass p-6 rounded-2xl">Improved personal protection (repellents, clothing, screens).</div>
-      <div class="glass p-6 rounded-2xl">Increased participation in anti-larvae campaigns.</div>
+      <div class="glass p-6 rounded-2xl">Enhanced community participation in anti-larvae campaigns and clean-up drives.</div>
     </div>
   </section>
 
@@ -80,6 +80,17 @@
       <ul class="list-disc list-inside text-gray-200">
         <li>Local health department to provide expert resources and data.</li>
         <li>Municipal corporation to assist in waste disposal and cleaning drive.</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Required Resources -->
+  <section class="py-20 px-6 max-w-5xl mx-auto">
+    <h2 class="text-3xl font-bold mb-4">Required Resources</h2>
+    <div class="glass p-6 rounded-2xl">
+      <ul class="list-disc list-inside text-gray-200">
+        <li>Conduct awareness activities.</li>
+        <li>Make videos and posters for awareness.</li>
       </ul>
     </div>
   </section>
@@ -131,3 +142,4 @@
   </script>
 </body>
 </html>
+
