--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                 <path d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2z"/>
             </svg>
         </div>
-        <iframe src="https://abhayjadhav-dengue-fever.hf.space/" class="chatbot-iframe" id="chatbot-iframe"></iframe>
+        <iframe src="https://abhayjadhav-dengue-fever.hf.space" class="chatbot-iframe" id="chatbot-iframe"></iframe>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
